--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -10,6 +10,7 @@ $font-weight-light: 300;
 $font-size: 16px;
 $font-size-xs: 11px;
 $font-size-sm: 13px;
+$font-size-cs: 14px;
 $font-size-md: 16px;
 $font-size-lg: 18px;
 $font-size-xl: 22px;
