--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -16,6 +16,29 @@
   JavaScript Hooks   |    js-         |  js-tab-switcher
 
 */
+/* mixin for multiline */
+.block-with-text {
+  overflow: hidden;
+  position: relative;
+  line-height: 1.2em;
+  max-height: 3.6em;
+  text-align: justify;
+  margin-right: -1em;
+  padding-right: 1em; }
+  .block-with-text:before {
+    content: '...';
+    position: absolute;
+    right: 0;
+    bottom: 0; }
+  .block-with-text:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    width: 1em;
+    height: 1em;
+    margin-top: 0.2em;
+    background: white; }
+
 /*! normalize.css v4.0.0 | MIT License | github.com/necolas/normalize.css */
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
@@ -2625,55 +2648,55 @@ span.checkbox {
   overflow: hidden;
   border: 3px solid #fff; }
 
-.jobs-notes-page .main-column {
-  float: left;
-  max-width: 72%; }
-
-.jobs-notes-page .cs-add-note-form {
-  margin-bottom: 30px; }
-
-.jobs-notes-page .cs-notes-list {
+.cs-notes-list {
   border-left: 3px solid #d9d9d9;
   margin-left: 40px;
   padding-top: 50px;
   position: relative;
   top: -30px;
   z-index: 10; }
-  .jobs-notes-page .cs-notes-list .avatar {
+  .cs-notes-list .avatar {
     left: -28px; }
-  .jobs-notes-page .cs-notes-list .cs-note {
+  .cs-notes-list .cs-note {
     position: relative;
     border-bottom: 1px solid #f2f2f2;
     margin-bottom: 18px;
     padding-left: 40px; }
-    .jobs-notes-page .cs-notes-list .cs-note .top-bar {
+    .cs-notes-list .cs-note .top-bar {
       font-size: 14px;
       position: relative;
       line-height: 1.4em;
       color: #c9c9c9;
       margin-bottom: 10px; }
-      .jobs-notes-page .cs-notes-list .cs-note .top-bar .author-narrative .author {
+      .cs-notes-list .cs-note .top-bar .author-narrative .author {
         font-weight: bold;
         color: #555; }
-      .jobs-notes-page .cs-notes-list .cs-note .top-bar .datetime {
+      .cs-notes-list .cs-note .top-bar .datetime {
         position: absolute;
         top: 0;
         right: 0; }
-      .jobs-notes-page .cs-notes-list .cs-note .top-bar a {
+      .cs-notes-list .cs-note .top-bar a {
         color: #4992d0; }
-    .jobs-notes-page .cs-notes-list .cs-note .note-content {
+    .cs-notes-list .cs-note .note-content {
       line-height: 1.5em;
       font-size: 14px;
       color: #7f7f7f; }
-      .jobs-notes-page .cs-notes-list .cs-note .note-content p {
+      .cs-notes-list .cs-note .note-content p {
         margin-bottom: 1em; }
-    .jobs-notes-page .cs-notes-list .cs-note .tags {
+    .cs-notes-list .cs-note .tags {
       font-size: 14px;
       margin-bottom: 30px; }
-      .jobs-notes-page .cs-notes-list .cs-note .tags .fa-tags {
+      .cs-notes-list .cs-note .tags .fa-tags {
         color: #d9d9d9; }
-      .jobs-notes-page .cs-notes-list .cs-note .tags a {
+      .cs-notes-list .cs-note .tags a {
         color: #4992d0; }
+
+.jobs-notes-page .main-column {
+  float: left;
+  max-width: 72%; }
+
+.jobs-notes-page .cs-add-note-form {
+  margin-bottom: 30px; }
 
 .inset-widgets {
   width: 25%;
@@ -2682,17 +2705,103 @@ span.checkbox {
     line-height: 1.3em;
     margin-bottom: .5em; }
   .inset-widgets .search-form {
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    position: relative; }
     .inset-widgets .search-form .cs-search-notes {
-      margin-right: 10px; }
+      width: 80%;
+      float: left; }
+      .inset-widgets .search-form .cs-search-notes input {
+        width: 100%; }
     .inset-widgets .search-form .js-search-notes {
       line-height: 20px;
-      padding: 1px 8px; }
+      padding: 1px 8px;
+      float: right; }
   .inset-widgets .used-tags-list {
     line-height: 1.8em;
     padding-left: 20px;
     font-size: 14px; }
     .inset-widgets .used-tags-list a {
       color: #4992d0; }
+
+.cs-notes-box .cs-add-note-form {
+  background: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  overflow: hidden;
+  -webkit-box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.04);
+          box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.04);
+  border-bottom: 1px solid #d9d9d9; }
+  .cs-notes-box .cs-add-note-form .inner-note {
+    padding: 10px;
+    -webkit-box-shadow: 0 0 3px 3px white;
+            box-shadow: 0 0 3px 3px white; }
+  .cs-notes-box .cs-add-note-form .toggle-no-tags {
+    left: 10px; }
+  .cs-notes-box .cs-add-note-form .tags-field.title {
+    line-height: 2.2em; }
+  .cs-notes-box .cs-add-note-form .avatar {
+    display: none;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0;
+        -ms-flex: 0;
+            flex: 0; }
+
+.cs-notes-box .cs-notes-list {
+  margin-left: 0px;
+  border-left-width: 1px;
+  top: 0px;
+  padding-top: 0px;
+  padding-left: 20px;
+  background: #f7f7f7;
+  border: none;
+  border-bottom: 1px solid #d9d9d9;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 152px; }
+  .cs-notes-box .cs-notes-list .avatar {
+    width: 32px;
+    height: 32px;
+    left: -17px;
+    top: 10px;
+    border-color: #f7f7f7; }
+  .cs-notes-box .cs-notes-list .top-bar {
+    font-size: 13px;
+    margin-bottom: 4px; }
+    .cs-notes-box .cs-notes-list .top-bar .author-narrative .author {
+      font-weight: normal; }
+    .cs-notes-box .cs-notes-list .top-bar .time-text {
+      display: none; }
+  .cs-notes-box .cs-notes-list .cs-note {
+    padding-left: 20px;
+    padding: 10px 10px 0 20px;
+    border-left: 1px solid #d9d9d9;
+    margin-bottom: 0px;
+    width: 100%; }
+    .cs-notes-box .cs-notes-list .cs-note .note-content {
+      font-size: 13px;
+      overflow: hidden;
+      position: relative;
+      line-height: 1.4em;
+      max-height: 2.8em;
+      text-align: justify;
+      margin-right: -1em;
+      padding-right: 1em;
+      margin-right: 0em;
+      margin-bottom: 8px; }
+      .cs-notes-box .cs-notes-list .cs-note .note-content:before {
+        content: '...';
+        position: absolute;
+        right: 0;
+        bottom: 0; }
+      .cs-notes-box .cs-notes-list .cs-note .note-content:after {
+        content: '';
+        position: absolute;
+        right: 0;
+        width: 1em;
+        height: 1em;
+        margin-top: 0.2em;
+        background: white; }
+  .cs-notes-box .cs-notes-list .tags {
+    display: none; }
 
 /*# sourceMappingURL=styles.css.map */
