--- a/sass/_jobs_list.scss
+++ b/sass/_jobs_list.scss
@@ -325,18 +325,19 @@
       display: none;
       position: absolute;
       z-index: 10;
-      top: -125px;
-      left: -78px;
+      top: -8px;
+      left: 0px;
       transform: rotate(-90deg);
+      transform-origin: 0 0;
       width: 200px;
       font-size: $font-size-sm;
-      line-height: 1.3em;
+      line-height: 1.1em;
       padding-top: -6px;
       opacity: .9;
 
       .task-name {
         position: relative;
-        top: -5px;
+        top: -7px;
       }
     }
 
