--- a/sass/_notes.scss
+++ b/sass/_notes.scss
@@ -202,6 +202,30 @@
 
 }
 
+.cs-note {
+
+  .lower {
+    display: flex;
+
+    .tags {
+      flex: 8;
+    }
+
+    .author-links {
+      display: none;
+      flex: 2;
+      font-size: $font-size-sm;
+
+      a {
+        color: $button_blue;
+        position: relative;
+        right: -40px;
+      }
+    }
+
+  }
+}
+
 .jobs-notes-page {
 
   .notes-search-results-message {
@@ -217,6 +241,16 @@
 
   .cs-add-note-form {
     margin-bottom: $padding * 3;
+  }
+
+  .cs-note.author-me {
+
+    &:hover {
+      .author-links {
+        display: block;
+      }
+
+    }
   }
 
 }
