--- a/sass/_notes.scss
+++ b/sass/_notes.scss
@@ -226,7 +226,8 @@
   }
 }
 
-.jobs-notes-page {
+.jobs-notes-page,
+.projects-notes-page {
 
   .notes-search-results-message {
     margin-bottom: $paddingLarge;
